# MarkItDown

./: Cargo.toml  LICENSE  README.md
src/: app.rs  lib.rs  main.rs
